too many changes to list

--- a/config/config - Copy.ini
+++ b/config/config - Copy.ini
@@ -1,11 +1,12 @@
+[Activator]
+# $ signals the identifier place
+Activator: <$>
+
 [Credentials]
-Token: 
+Token:
 
 [Commands]
-Trigger: !
-CommandTrigger: ~
-L-Extender: "
-R-Extender: "
+CommandTrigger: !
 
 [Debug]
-debug:
+debug: False
