changed the way commands interpret

--- a/config/config - Copy.ini
+++ b/config/config - Copy.ini
@@ -1,6 +1,7 @@
 [Activator]
 # $ signals the identifier place
-Activator: <$>
+# <$> will clash with discord emotes so better dont use it
+Activator: [$]
 
 [Credentials]
 Token:
